--- a/agent/templates/agent/agent_base.html
+++ b/agent/templates/agent/agent_base.html
@@ -115,7 +115,7 @@
       <div class="col-md-4">
         <div class="text-center text-md-start mb-3 mb-md-0">
           <a href="{% url 'agent_bookings' %}">
-            <img class="h-30px" src="{% static 'dashboard/images/logo-light.svg' %}" alt="logo">
+            <img class="h-30px" src="{% static 'frontend/img/logo.png' %}" alt="logo">
           </a>
         </div>
       </div>
@@ -130,10 +130,8 @@
       <!-- Widget -->
       <div class="col-md-4">
         <ul class="list-inline mb-0 text-center text-md-end">
-          <li class="list-inline-item ms-2"><a href="#"><i class="text-white fab fa-facebook"></i></a></li>
-          <li class="list-inline-item ms-2"><a href="#"><i class="text-white fab fa-instagram"></i></a></li>
-          <li class="list-inline-item ms-2"><a href="#"><i class="text-white fab fa-linkedin-in"></i></a></li>
-          <li class="list-inline-item ms-2"><a href="#"><i class="text-white fab fa-twitter"></i></a></li>
+          <li class="list-inline-item ms-2"><a href="https://www.facebook.com/profile.php?id=61556673353614"><i class="text-white fab fa-facebook"></i></a></li>
+          <li class="list-inline-item ms-2"><a href="https://www.instagram.com/freesport.reservas"><i class="text-white fab fa-instagram"></i></a></li>
         </ul>
       </div>
     </div>
