--- a/users/templates/users/sign-up.html
+++ b/users/templates/users/sign-up.html
@@ -99,6 +99,13 @@
                         Inicia sesión
                       </a>
                     </div>
+
+                    <div class="text-primary-hover text-body mt-3 text-center"> Al momento de registrarte estás aceptando nuestros
+                      <a href="https://drive.google.com/file/d/1GRplYJ4XGZgrq83DjfEvzGP1YR1R8juB/view?usp=sharing"
+                         target="_blank" class="text-body"><b>Términos y condiciones</b></a>. Además nuestro <a
+                          href="https://drive.google.com/file/d/1ec3lBQrv99d40_T6KPa4dPb_Di2C-PpU/view?usp=sharing"
+                          target="_blank" class="text-body"><b>Política de privacidad.</b></a>
+                    </div>
                   </form>
                 </div>
               </div>
